--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@sparticuz/chromium": "^123.0.1",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.59.15",
+    "@types/bad-words": "^3.0.3",
+    "bad-words": "^4.0.0",
+    "bad-words-next": "^3.1.1",
     "clsx": "^2.1.1",
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
+    "leo-profanity": "^1.8.0",
     "lucide-react": "^0.554.0",
     "mongoose": "^8.20.0",
     "next": "16.0.3",
