--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "leo-profanity": "^1.8.0",
     "lucide-react": "^0.554.0",
     "mongoose": "^8.20.0",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "puppeteer-core": "^22.6.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -37,7 +37,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "^16.0.7",
     "postcss": "^8.5.6",
     "postcss-preset-mantine": "^1.18.0",
     "postcss-simple-vars": "^7.0.1",
